<resources>
    <string name="app_name">OneMorePassword</string>
    <string name="contentDescription_title">One More Password title image logo</string>
    <string name="contentDescription_starImage">One More Password star image</string>
    <string name="generate">Generate</string>
    <string name="copytext">Copy</string>
    <string name="switchLowLetters">Low Letters</string>
    <string name="switchUpLetters">Up Letters</string>
    <string name="switchNumbers">Numbers</string>
    <string name="switchSymbols">Symbols</string>
    <string name="passTextResult">Your pass!</string>
    <string name="lengthText">10</string>
    <string name="passStrength_very_weak">Very Weak...</string>
    <string name="passStrength_weak">Weak</string>
    <string name="passStrength_good">Good</string>
    <string name="passStrength_strong">Strong</string>
    <string name="passStrength_very_strong">Very Strong!!</string>
    <string name="ompHeaderImage_contentDescription">Header image of app</string>
    <string name="character_text">Characters</string>
    <string name="footerTip_text">Roboword says: You can set the length of your password from 4 (easy to remember) to 50 characters (extra hard to decode). Also, as you choose more parameters your password gets safer. So go big, go nuts!!</string>
</resources>