<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ompHeaderImage_imageView"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/ompHeaderImage_contentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/omp_robotandsquareimage" />

        <TextView
            android:id="@+id/pass_Text"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:text="@string/passTextResult"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/levelStar_03_imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toStartOf="@+id/levelStar_04_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/levelStar_02_imageView"
            app:layout_constraintTop_toTopOf="@+id/ompHeaderImage_imageView"
            app:srcCompat="@drawable/omp_levelstrengthcoloredblueimage" />

        <ImageView
            android:id="@+id/levelStar_01_imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toStartOf="@+id/levelStar_02_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ompHeaderImage_imageView"
            app:layout_constraintTop_toTopOf="@+id/ompHeaderImage_imageView"
            app:srcCompat="@drawable/omp_levelstrengthcoloredblueimage" />

        <ImageView
            android:id="@+id/levelStar_02_imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toStartOf="@+id/levelStar_03_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/levelStar_01_imageView"
            app:layout_constraintTop_toTopOf="@+id/ompHeaderImage_imageView"
            app:srcCompat="@drawable/omp_levelstrengthcoloredblueimage" />

        <ImageView
            android:id="@+id/levelStar_05_imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toStartOf="@+id/ompHeaderImage_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/levelStar_04_imageView"
            app:layout_constraintTop_toTopOf="@+id/ompHeaderImage_imageView"
            app:srcCompat="@drawable/omp_levelstrengthcoloredblueimage" />

        <ImageView
            android:id="@+id/levelStar_04_imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            app:layout_constraintEnd_toStartOf="@+id/levelStar_05_imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/levelStar_03_imageView"
            app:layout_constraintTop_toTopOf="@+id/ompHeaderImage_imageView"
            app:srcCompat="@drawable/omp_levelstrengthcoloredblueimage" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/generate"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/copyText_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelStar_03_imageView" />

        <Button
            android:id="@+id/copyText_button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/copytext"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/generate_button"
            app:layout_constraintTop_toBottomOf="@+id/levelStar_03_imageView" />

        <SeekBar
            android:id="@+id/lengthSize_seekBar"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:max="50"
            android:maxWidth="3dp"
            android:maxHeight="3dp"
            android:min="4"
            android:progress="10"
            android:progressDrawable="@color/widget_darkBlue_color"
            android:thumbTint="@color/widget_midBlue_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/characters_textView"
            app:layout_constraintTop_toBottomOf="@+id/generate_button"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/lengthPass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:importantForAutofill="no"
            android:text="@string/lengthText"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/widget_midBlue_color"
            app:layout_constraintEnd_toStartOf="@+id/characters_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_button" />

        <TextView
            android:id="@+id/characters_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/character_text"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/lengthSize_seekBar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lengthPass_text"
            app:layout_constraintTop_toBottomOf="@+id/generate_button" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/lowLetters_switch"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:checked="true"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/switchLowLetters"
            android:theme="@style/SwitchCompatTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characters_textView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/upLetters_switch"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:checked="true"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/switchUpLetters"
            android:theme="@style/SwitchCompatTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowLetters_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/numbers_switch"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:checked="true"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/switchNumbers"
            android:theme="@style/SwitchCompatTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characters_textView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/symbols_switch"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:checked="true"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/switchSymbols"
            android:theme="@style/SwitchCompatTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numbers_switch" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>